# homework_c

./: .gitignore  CMakeLists.txt  README.md  README_HW_1.md  ci.yml
.github/workflows/: blank.yml  ci.yml  clang-format-check.yml
data/: data.py
hw-1/: CMakeLists.txt  main.c  minor_matrix.c  minor_matrix.h  minor_matrix_test.cpp
hw-1/project/: minor_matrix.c  minor_matrix.h
include/: classify_by_digraphs.h  functions.h  input.h  parallel_or_consistent.h
linters/: run.sh
project/: main.c  minor_matrix.c  minor_matrix.h
src/: consistent.c  dynamic.c  input.c  main.c  parallel.c  static.c
tests/: 4.txt  5.txt  6.txt  7.txt  dynamic_test.cpp  input_test.cpp  lib_test.cpp  minor_matrix_test.cpp
tests/data/: 7.txt  8.txt
